Adição da classe Transporte.h. Adição dos atributos da mesma, get's, set's e construtores.

--- a/Trabalho Pratico/Trabalho Pratico.vcxproj
+++ b/Trabalho Pratico/Trabalho Pratico.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="Automatico.h" />
     <ClInclude Include="Posto.h" />
     <ClInclude Include="Robot.h" />
+    <ClInclude Include="Transporte.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
