Adição do atributo key1 e key2 à classe Armazem.h. Adição dos operadores à classe Armazem.h.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Trabalho Pratico.sln
 /Trabalho Pratico/Debug/Trabalho Pratico.log
 /Trabalho Pratico/Debug/Trabalho Pratico.lastbuildstate
+/*.opensdf
